# deep-vision-lab

./: .gitignore  Makefile  README.md  pyproject.toml
cnn/landmark_classification/: app.ipynb  cnn_from_scratch.ipynb  transfer_learning.ipynb
cnn/landmark_classification/src/: data.py  helpers.py  model.py  optimizer.py  predictor.py  train.py  transfer.py
cnn/landmark_classification/tests/: test_data.py  test_model.py  test_optimizer.py  test_predictor.py  test_train.py  test_transfer.py
cnn/mnist/cnn/: classification.ipynb
cnn/mnist/mlp/: best_mlp_mnist_model.pth  classification.ipynb
criterion/: __init__.py  criterion.py
data/: __init__.py  dataloader.py  dataset.py  helper.py  sampler.py
gan/mnist/: GAN image generation.ipynb
gan/stylegan/: Face Generation.ipynb  Overview.ipynb
infra/: main.tf  networking.tf
infra/modules/ec2/: cnn-instance.tf  ec2-cnn-instance.pub  variables.tf
model/: alexnet.py  helper.py  resnet.py  vgg.py
model/block/: __init_-.py  bottleneck.py  gap.py  residual.py  se.py
optimize/: __init__.py  optimizer.py
trainer/: __init__.py  autoencoder.py  cnn.py  gan.py  trainer.py  vae.py
utils/: __init__.py  device.py
