[tool.poetry]
name = "deep-vision-lab"
version = "0.1.0"
description = ""
authors = ["regokan <regokan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "<4.0,>=3.12"
notebook = "^7.2.2"
opencv-python-headless = "^4.10.0.84"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pillow = "^11.0.0"
bokeh = "^3.6.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
tqdm = "^4.66.6"
ipywidgets = "^8.1.5"
livelossplot = "^0.5.5"
pytest = "^8.3.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
transformers = "^4.46.1"
black = {extras = ["jupyter"], version = "^24.10.0"}



[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
